# MultiBoost

./: .gitignore  CMakeLists.txt  Defaults.h  Makefile  README.md  main.cpp  version
Algorithms/: ConstantAlgorithm.cpp  ConstantAlgorithm.h  ConstantAlgorithmLSHTC.cpp  ConstantAlgorithmLSHTC.h  RegressionStumpAlgorithm.h  SparseStumpAlgorithm.h  StumpAlgorithm.h  StumpAlgorithmLSHTC.h
Bandits/: Exp3.cpp  Exp3.h  Exp3G.cpp  Exp3G.h  Exp3G2.cpp  Exp3G2.h  Exp3P.cpp  Exp3P.h  GenericBanditAlgorithm.cpp  GenericBanditAlgorithm.h  Random.cpp  Random.h  UCBK.cpp  UCBK.h  UCBKRandomized.cpp  UCBKRandomized.h  UCBKV.cpp  UCBKV.h
BanditsLS/: Exp3GLS.cpp  Exp3GLS.h  Exp3LS.cpp  Exp3LS.h  GenericBanditAlgorithmLS.cpp  GenericBanditAlgorithmLS.h  UCTLS.cpp  UCTLS.h
Bzip2/: Bzip2Wrapper.h  dlltest.c  mk251.c  spewG.c  unzcrash.c
Classifiers/: AdaBoostMHClassifier.cpp  AdaBoostMHClassifier.h  BrownBoostClassifier.cpp  BrownBoostClassifier.h  ExampleResults.cpp  ExampleResults.h  FilterBoostClassifier.cpp  FilterBoostClassifier.h  LogitBoostClassifier.cpp  LogitBoostClassifier.h
IO/: ADTreeData.cpp  ADTreeData.h  ArffParser.cpp  ArffParser.h  ArffParserBzip2.cpp  ArffParserBzip2.h  EncodeData.cpp  EncodeData.h  ExtendableData.cpp  ExtendableData.h  GenericParser.h  HaarData.cpp  HaarData.h  InputData.cpp  InputData.h  LSHTCParser.cpp  LSHTCParser.h  NameMap.cpp  NameMap.h  OutputInfo.cpp  OutputInfo.h  ParasiteData.h  RawData.cpp  RawData.h  Serialization.cpp  Serialization.h  SortedData.cpp  SortedData.h  TxtParser.cpp  TxtParser.h
Kmeans/: KCtree.h
Others/: Example.h  Rates.h
StrongLearners/: ADTreeLearner.cpp  ADTreeLearner.h  AdaBoostMHLearner.cpp  AdaBoostMHLearner.h  BrownBoostLearner.cpp  BrownBoostLearner.h  FilterBoostLearner.cpp  FilterBoostLearner.h  GenericStrongLearner.h  LogitBoostLearner.cpp  LogitBoostLearner.h
Utils/: Args.cpp  Args.h  ClassHierarchy.cpp  ClassHierarchy.h  MathUtils.cpp  MathematicalTools.h  StreamTokenizer.h  UCTutils.cpp  UCTutils.h  Utils.cpp  Utils.h
WeakLearners/: AbstainableLearner.cpp  AbstainableLearner.h  BanditLearner.cpp  BanditLearner.h  BanditProductLearner.cpp  BanditProductLearner.h  BanditSingleStumpLearner.cpp  BanditSingleStumpLearner.h  BanditTreeLearner.cpp  BanditTreeLearner.h  BaseLearner.cpp  BaseLearner.h  ConstantLearner.cpp  ConstantLearner.h  DirichletSingleStumpLearner.cpp  DirichletSingleStumpLearner.h  EnumLearner.cpp  EnumLearner.h  EnumLearner2.cpp  EnumLearner2.h  EnumLearner3.cpp  EnumLearner3.h  EnumLearner4.cpp  EnumLearner4.h  EnumLearnerKNN.cpp  EnumLearnerKNN.h  EnumLearnerSA.cpp  EnumLearnerSA.h  FeaturewiseLearner.cpp  FeaturewiseLearner.h  HaarMultiStumpLearner.cpp  HaarMultiStumpLearner.h  HaarSingleStumpLearner.cpp  HaarSingleStumpLearner.h  HierarchicalStumpLearner.cpp  HierarchicalStumpLearner.h  MultiStumpLearner.cpp  MultiStumpLearner.h  ParasiteLearner.cpp  ParasiteLearner.h  (+36 more)
WeakLearners/Haar/: HaarFeatures.cpp  HaarFeatures.h  HaarLearner.cpp  HaarLearner.h
src/: Defaults.h  Registrations.h  main.cpp
src/Algorithms/: ConstantAlgorithm.cpp  ConstantAlgorithm.h  ConstantAlgorithmLSHTC.cpp  ConstantAlgorithmLSHTC.h  OneClassStumpAlgorithm.h  RegressionStumpAlgorithm.h  SparseStumpAlgorithm.h  StumpAlgorithm.h  StumpAlgorithmLSHTC.h
src/Bandits/: Exp3.cpp  Exp3.h  Exp3G.cpp  Exp3G.h  Exp3G2.cpp  Exp3G2.h  Exp3P.cpp  Exp3P.h  Random.cpp  (+9 more)
trash/: MathUtils.cpp  TreeLearner2.cpp  TreeLearner2.h  TreeLearner3.cpp  TreeLearner3.h
(+142 files in other folders)
